Bug 69041 - moxa: build_skb() memory corruption
Summary: moxa: build_skb() memory corruption
Status: CLOSED CODE_FIX
Alias: None
Product: Drivers
Classification: Unclassified
Component: Network (show other bugs)
Hardware: ARM Linux
: P1 high
Assignee: drivers_network@kernel-bugs.osdl.org
URL:
Keywords:
: 65491 (view as bug list)
Depends on:
Blocks:
 
Reported: 2014-01-20 10:24 UTC by Jonas Jensen
Modified: 2017-03-29 10:19 UTC (History)
0 users

See Also:
Kernel Version: 3.12-rc1
Subsystem:
Regression: No
Bisected commit-id:


Attachments

Description Jonas Jensen 2014-01-20 10:24:38 UTC
drivers/net/ethernet/moxa/moxart_ether.c has the following error on wget download (or ncftp), usually after only a few seconds:

"read error: Bad address"

On receiving this error, wget exits. The download is not resumed (busybox default).
Comment 1 Jonas Jensen 2014-10-06 07:15:29 UTC
Fixed in v3.17-rc5.

See commit "net: moxa: replace build_skb() with netdev_alloc_skb_ip_align() / memcpy()" 9fe1b3bc8d9182e950a744e4a47187420efa67f3.
Comment 2 Jonas Jensen 2017-03-29 10:19:33 UTC
*** Bug 65491 has been marked as a duplicate of this bug. ***

Note You need to log in before you can comment on or make changes to this bug.